--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="js/step-1.js"></script>
 </body>
 </html>
